# SulcusOS

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  debug_os.py  exmaple_agents.json  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  sulcus_os_cofounder_pitch_deck.pptx
agentos/: __init__.py  _version.py  checkpoints.py  cli.py  config.py  ipc.py  llm.py  native.py  runtime.py  tools.py
demos/: memory_paging.py
docs/: README.md  architecture.md  checkpoints.md  concepts.md  configuration.md  examples.md  installation.md  interactive_shell.md  ipc_protocol.md  persistent_memory.md  public_api.md  quickstart.md  roadmap.md  troubleshooting.md  windows_dev_setup.md
examples/: agent_tool_loop_approval_resume_demo.py  agent_tool_loop_multi_round_demo.py  agent_tool_loop_multi_tool_demo.py  agent_tool_loop_parallel_tool_demo.py  agent_tool_loop_persistent_checkpoint_demo.py  agent_tool_loop_phase6_smoke_test.py  agent_tool_loop_resource_limits_demo.py  agent_tool_loop_tool_permission_demo.py  crashing_agent.py  echo_agent.py  isolated_counter_agent.py  llm_tool_call_phase4_smoke_test.py  manual_tool_execution_phase5_smoke_test.py  memory_recaller_agent.py  memory_supervisor_agent.py  memory_writer_agent.py  openrouter_phase2_smoke_test.py  ping_agent.py  pong_agent.py  public_api_quickstart.py  request_reply_agent.py  runtime_capabilities_demo.py  tool_runtime_phase3_smoke_test.py
kernel/: __init__.py  agent_tool_loop.py  dashboard.py  dependency_graph.py  events.py  ipc_inspector.py  ipc_protocol.py  llm_cost_monitor.py  memory_store.py  metrics.py  native_core.py  process.py  process_runner.py  replay.py  shell_help.py  timeline.py
scripts/: make_sulcus_showcase.py  render_showcase_voice.ps1  setup_dev_windows.ps1  test_windows.ps1  verify_package.py
src/: ipc.rs  memory.rs
tests/: test_agent_metrics.py  test_agent_tool_loop.py  test_checkpoints.py  test_cli.py  test_config.py  test_dashboard_scroll.py  test_dependency_graph.py  test_execution_replay.py  test_external_agent.py  test_ipc.py  test_ipc_inspector.py  test_ipc_protocol.py  test_llm_cost.py  test_llm_cost_monitor.py  test_llm_retry.py  test_llm_routing.py  test_llm_runtime.py  test_llm_streaming.py  test_llm_tool_calling.py  test_memory_store.py  (+12 more)
(+95 files in other folders)
