[package]
name = "agent_os_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_os_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
wasmtime = { version = "20.0", features = ["async", "pooling-allocator"] }
wasmtime-wasi = { version = "20.0", features = ["preview1"] }
